--- a/style.css
+++ b/style.css
@@ -73,3 +73,29 @@ body {
 .color3 {
     background-color: #FFF4D6;
 }
+
+.peoples_story1 {
+    display: flex;
+    margin-top: 5%;
+}
+
+.half_width {
+    width: 50%;
+}
+
+.leftContent {
+    padding-left: 10%;
+    padding-right: 2%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+
+.leftContent p {
+    width: 60%;
+}
+
+.image_style {
+    width: 50%;
+    height: 100%;
+
+}
