--- a/style.css
+++ b/style.css
@@ -13,12 +13,38 @@ body {
     align-items: center;
 }
 
+#banner h1 {
+    font-family: 'Inter', sans-serif;
+    font-size: 65px;
+}
+
+#banner p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    color: #FFFFFF;
+    line-height: 28px;
+}
+
+.color_blue {
+    color: #ff5959;
+}
+
 .banner_content {
-    color: white;
-    width: 30%;
+    color: #FFFFFF;
+    width: 50%;
+    text-align: center;
     /* flex-direction: column; */
+}
 
-
+.donate_btn {
+    background-color: #FF5959;
+    padding: 17px 30px;
+    border: none;
+    border-radius: 7px;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 /* .banner_content h1 {
