--- a/style.css
+++ b/style.css
@@ -230,16 +230,27 @@ input[type=number] {
 
 .peoples_story1 {
     display: flex;
-    margin-top: 5%;
+    width: 80%;
+    margin-top: 8%;
+    margin-left: 10%;
 }
 
-.half_width {
-    width: 50%;
+.peoples_story_h1 {
+    font-family: 'Inter', sans-serif;
+    font-size: 45px;
+    font-weight: 700;
 }
 
-.left_padding {
-    padding-left: 10%;
-    padding-right: 2%;
+.peoples_story_p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    color: #707070;
+    text-align: left;
+}
+
+.width_left {
+    width: 40%;
 }
 
 .leftContent {
@@ -247,12 +258,25 @@ input[type=number] {
     padding-bottom: 4%;
 }
 
-.leftContent p {
-    width: 60%;
+.contribute_btn {
+    background-color: #FF5959;
+    padding: 17px 30px;
+    border: none;
+    border-radius: 7px;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-top: 0.8em;
+}
+
+.image_container {
+    padding-left: 10%;
 }
 
 .image_style {
-    width: 60%;
+    width: 80%;
     height: 100%;
 
 }
