--- a/style.css
+++ b/style.css
@@ -319,6 +319,7 @@ input[type=number] {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 8%;
 }
 
 #getUpdateHeading {
@@ -375,12 +376,13 @@ input[type=number] {
 .subscribe {
     width: 45%;
     text-align: center;
+    margin-top: 2%;
 }
 
 .form {
 
-    padding-top: 7%;
-    padding-bottom: 7%;
+    padding-top: 8%;
+    padding-bottom: 8%;
     background-color: #FFF4D6;
 
 }
@@ -389,4 +391,27 @@ input[type=number] {
 
 footer {
     text-align: center;
+    background-color: #0B0D17;
+    width: 100%;
+    height: 180px;
+}
+
+.test {
+    margin: 0;
+    position: relative;
+    top: 50px;
+}
+
+footer div h2 {
+    font-family: 'Lobster', cursive;
+    font-size: 36px;
+    font-weight: 400;
+    color: #FF5959;
+    margin-top: 50px;
+}
+
+footer div p {
+    font-family: 'Manrope', sans-serif;
+    font-size: 14px;
+    color: #D9DBE1;
 }
